vX.Y.Z (YYYY-MM-DD)

- Add "report" script to handle both post-process and generate-report scripts
- Update AppImage to use touchstone-tools v0.5.2
- Update format of transaction summary output

v0.52.0 (2023-04-30)

- Use profiling scripts from touchstone-tools to collect readprofile, oprofile,
  or perf if requested and available
- Add command line flag to pgsql-load-stored-procs and pgsql-build-db to
  specify alternative location for pl/pgsql stored functions
- Rename run-workload script to run
- Update run script to use touchstone-tools v0.5.1
- Refactor run logic for handling 1-tier, 2-tier, and 3-tier testing test
  execution and stats collection.
- Remove "easy" script and instead make its parameters the default execution
  method, thus breaking down the traditional benchmark specification behavior
  into additional options
- Refactor option handling to incorporate long parameter names
- Add "run" script man page.
- Add "build" script to simplify running database build commands, with man page

v0.51.0 (2023-04-25)

- Add "version" script to show kit version and version of software that may be
  used by the kit
- Update AppImage to install dbttools v0.5.0 for its version information
  reporting, and updated reporting scripts
- Use .svg file for AppImage; remove .png file.
- Use ARGV0 instead of hard coding name in AppRun
- Remove Julia version of dbt2-post-process
- Add SQLite3 version of dbt2-post-process
- Calculate type 1 quantiles
- Rename container directory to tools
- Use touchstone-tools v0.4.2 for gnuplot based sar, pidstat and postgresql
  stats plotting
- Remove dbt2-sysstat in favor of touchstone-tools ts-sysstat version.
- Update general and postgresql report generation based on touchstone-tools
  differing chart filenames and directory layout
- Stop generating PDF reports with pandoc unless specified to save time
- Remove sar post-processing since ts-sysstat handles that