@@ -3,6 +3,7 @@ vX.Y.Z (YYYY-MM-DD)
 - Add "report" script to handle both post-process and generate-report scripts
 - Update AppImage to use touchstone-tools v0.5.2
 - Update format of transaction summary output
+- Update "build" and "run" to use "dbt2" command
 
 v0.52.0 (2023-04-30)
 
